bk_ida/gobmkida/c1/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/hashtable_partially_clear/src/engine/cache.c:853:30: error: use of undeclared identifier 'off_48B2F0'
fprintf( stderr, "%-14s%6d", off_48B2F0[i], v13); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/hashtable_partially_clear/src/obj/1/cache.o] Error 1
